# Kernels

./: CMakeLists.txt  avg-pool-1d  avg-pool-1d-simple.cu  avg-pool-1d.cpp  avg-pool-1d.cu  pyproject.toml  requirements.txt  tasks.py
profile/: profile-avg-pool-1d.cu
src/: avg-pool-1d-simple.cuh  avg-pool-1d.cuh
test/: test-avg-pool-1d-simple.cu  test-avg-pool-1d.cu
